--- a/front/public/index.html
+++ b/front/public/index.html
@@ -19,6 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBSXt4sghEhLPPji-NplhyXs9cjKT4Fpw&callback=initMap">
+    </script>
     <title>React App</title>
   </head>
   <body>
