--- a/front/public/index.html
+++ b/front/public/index.html
@@ -19,9 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBSXt4sghEhLPPji-NplhyXs9cjKT4Fpw&callback=initMap">
-    </script>
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
