--- a/front/public/index.html
+++ b/front/public/index.html
@@ -21,6 +21,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
