--- a/front/public/index.html
+++ b/front/public/index.html
@@ -25,8 +25,12 @@
     <title>Digiloop</title>
   </head>
   <body>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN0SNyI8W4PSk8x6kbS0XRcXGLODokzBw"></script>
     <noscript>
-      You need to enable JavaScript to run this app.
+      <p style="text-align: center">
+          You need to enable JavaScript to run this app.
+      </p>
+      
     </noscript>
     <div id="root"></div>
     <!--
