--- a/front/public/index.html
+++ b/front/public/index.html
@@ -25,6 +25,7 @@
     <title>Digiloop</title>
   </head>
   <body>
+    <!-- vanha API <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN0SNyI8W4PSk8x6kbS0XRcXGLODokzBw"></script> -->
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2nhR5lmzfGQ_lD4Es_Jres1vPMgn1guQ"></script>
     <noscript>
       <p style="text-align: center">
